# scn_redcap_clean

./: 01_cleaning.qmd  pyproject.toml  readme.qmd  redcap_cleaning.qmd
archive/: 01_merged_raw_v001.csv  01_merged_raw_v002.csv  02_translated_v001.csv  02_translated_v002.csv  03_removed_duplicates_v001.csv  03_removed_duplicates_v002.csv  2_translated_v001.csv  3_removed_duplicates_v001.csv  duplicates_for_review_v001.csv  duplicates_for_review_v002.csv  duplicates_manual_override_v001.csv  genomics_for_review_v001.csv  genomics_manual_override_v001.csv  medications_for_review_v001.csv  medications_for_review_v002.csv  medications_manual_override_v001.csv  translations_for_review_v001.csv
overrides/: duplicates_manual_override.csv  genomics_manual_override.csv  medications_manual_override.csv  medications_manual_override.txt
raw/: Toy1.csv  Toy2.csv  __base__.csv  base.csv
ref/: SCN8A_position_map_uniprot.csv  SCN8A_position_map_uniprot_full.csv  ToyDict.csv  Toy_clinical_taxonomy.csv
review/: duplicates_manual_override.csv  medications_manual_override.csv  translation_manual_override.csv  translations_manual_override.csv
scn_redcap_clean/: __init__.py  age.py  archiver.py  base_csv.py  bio.py  cleaner.py  config.py  console.py  csv_kit.py  csv_writer.py  data.py  data_dict.py  detector.py  duplicate_mapper.py  duplicates.py  extract_ai.py  field_dict.py  genomics.py  local_ai.py  meds.py  merge.py  merging.py  override_manager.py  overrides.py  paths.py  processor_json.py  test.py  (+14 more)
scn_redcap_clean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+5 files in other folders)
