[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scn_redcap_clean"
version = "0.1.0"
description = "Data cleaning and preprocessing for Hammer Lab REDCap SCN genomics data"
#dynamic = ["dependencies"]
dependencies = [
    'pandas',
    'argostranslate',
    'langdetect',
    'certifi']

[tool.setuptools]
# Force Python to only look at your core package directory
packages = ["scn_redcap_clean"]

#[tool.setuptools.dynamic]
# Points to the correct, relative path inside your package folder
#dependencies = {file = ["scn_redcap_clean/requirements.txt"]}





[tool.pyrefly]
project-includes = ["src", "."]